--- a/Style.css
+++ b/Style.css
@@ -166,31 +166,6 @@ header .bottom_play_side {
   padding: 0px 20px;
 }
 
-/* header .bottom_play_side .wave {
-  width: 30px;
-  height: 30px;
-  padding-bottom: 5px;
-  display: flex;
-  align-items: flex-end;
-  margin-right: 10px;
-}
-
-header .bottom_play_side .wave .wave1 {
-  width: 3px;
-  height: 10px;
-  background-color: aqua;
-  margin-right: 3px;
-  border-radius: 10px 10px 0px 0px;
-}
-
-header .bottom_play_side .wave .wave1:nth-child(2) {
-  height: 13px;
-}
-
-header .bottom_play_side .wave .wave1:nth-child(2) {
-  height: 8px;
-} */
-
 header .bottom_play_side .icon {
 
   font-size: 50px;
@@ -199,6 +174,7 @@ header .bottom_play_side .icon {
   outline: none;
   display: flex;
   align-items: center;
+  margin-top: 40px;
 
 }
 
@@ -211,13 +187,12 @@ header .bottom_play_side .bi {
 header .bottom_play_side span {
   color: white;
   width: 32px;
-  /* border: 1px solid white; */
   font-size: 11px;
   font-weight: 400;
 }
 
 header .bottom_play_side #start {
-  margin: 0px 0px 0px 20px;
+  margin: 0px 0px 0px 50px;
 }
 
 header .bottom_play_side .bar {
@@ -237,26 +212,26 @@ header .bottom_play_side .bar input {
   cursor: pointer;
 }
 
-
+/*volume*/
 header .bottom_play_side .volume {
   position: relative;
   width: 100%;
   height: 2px;
-  margin-left: 50px;
+  margin-left: 100px;
+  margin-bottom: 15px;
 }
 
 header .bottom_play_side .volume .bi {
   position: absolute;
   color: white;
-  font-size: 25px;
-  top: -17px;
-  left: -30px;
+  font-size: 30px;
+  top: -9px;
+  left: -25px;
 }
 
-header .bottom_play_side .volume .input {
+header .bottom_play_side .volume input {
   position: absolute;
-  width: 100%;
-  top: -6px;
+  width: 25%;
   left: 0px;
   cursor: pointer;
 }
@@ -320,6 +295,7 @@ header .right_song_side nav .search {
 header .right_song_side nav .search .bi {
   font-size: 13px;
   padding: 3px 0px 0px 10px;
+  cursor: pointer;
 }
 
 header .right_song_side nav .search input {
@@ -335,7 +311,7 @@ header .right_song_side .songs {
   width: 90%;
   height: auto;
   margin: auto;
-  margin-top: 220px;
+  margin-top: 230px;
 
 
 
@@ -429,4 +405,58 @@ header .right_song_side .songs .anime_song li h5 .subtitle {
   white-space: no-wrap;
   text-overflow: ellipsis;
   color: black;
+}
+
+header .right_song_side .popular_artist {
+  width: 90%;
+  height: auto;
+  margin-top: 15px;
+  margin-left: 55px;
+}
+
+
+header .right_song_side .popular_artist .h4 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+header .right_song_side .popular_artist .h4 .bi {
+  cursor: pointer;
+  transition: .2s linear;
+}
+
+header .right_song_side .popular_artist .h4 .bi:hover {
+  color: #fff;
+}
+
+header .right_song_side .popular_artist .item {
+  width: 100%;
+  height: auto;
+  margin-top: 15px;
+  display: flex;
+  overflow: auto;
+  scroll-behavior: smooth;
+}
+
+header .right_song_side .popular_artist .item li {
+  list-style-type: none;
+  position: relative;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-right: 20px;
+  cursor: pointer;
+}
+
+
+header .right_song_side .popular_artist .item li img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+
+header .right_song_side .popular_artist .item::-webkit-scrollbar {
+  display: none;
 }
