last changed now

--- a/Style.css
+++ b/Style.css
@@ -238,7 +238,7 @@ header .bottom_play_side .volume input {
 }
 
 
-/*                             right section: Song side                                   */
+/*                             right section: Song side of the page                                */
 header .right_song_side {
   z-index: 2;
 }
